--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             class="w-4/5 border-solid border-2 border-gray-300 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 space-y-4 space-x-4 p-4 rounded-xl"
           >
             <div id="error" class="hidden">
-              <img src="../images/error.webp" />
+              <img src="./images/error.webp" />
               <p class="font-bold text-xl">No Information Available!</p>
             </div>
           </div>
